maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:2: error: Missing closing brace `}' assumed here
def aMurN(e:Direction):Boolean = {var b =false;var d = getDirection();setDirection(e);b = estFaceMur();setDirection(d);return b}
^Escaper:2: error: expected class or object definition
def aMurN(e:Direction):Boolean = {var b =false;var d = getDirection();setDirection(e);b = estFaceMur();setDirection(d);return b}
^Escaper:4: error: expected class or object definition
def aMurD():Boolean = {var b =false;droite();b = estFaceMur();gauche();return b}
^Escaper:7: error: expected class or object definition
def garM(c:Int):Int = { if (aMurD()) {if (estFaceMur()) {gauche();return c+1} else {avance();return c}} else {if (estFaceMur()) {droite();return c-1} else {gauche();avance();return c+1}
^